fixed white space

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -60,6 +60,7 @@ body {
 
         .navbar {
 
+
             button {
                 color: white;
                 background-color: #18bc9c;
@@ -177,6 +178,8 @@ body {
         }
 
         .navbar {
+            padding: 0;
+            margin: 0;
 
             h6 {
                 color: white;
